style home / responsive

--- a/css/reset.css
+++ b/css/reset.css
@@ -10,9 +10,13 @@ h1, h2, h3, h4, h5, h6, p, a, ul {
 	font-weight: normal;
 }
 
+a {
+	text-decoration: none;
+}
+
 img {
   display: block;
-  max-width: 100%;
+	max-width: 100%;
 }
 
 button {
